07/14/2005 Bob Rossi <bob@brasko.net>

	* README: Added documentation for packaged readline
	* RELEASE_TODO: Updated necessary work to do for next release.

07/13/2005 Bob Rossi <bob@brasko.net>

	* Makefile.am (SUBDIRS): Added $(READLINE_DIR).
	(EXTRA_DIST): Ditto.
	(DIST_SUBDIRS): Add the list of directories to be installed.
	* Makefile.in: Autogenerated.
	* config.h.in: Ditto.
	* configure: Ditto.
	* configure.in: Add support for internal or system readline.
	* various/Makefile.in: Autogenerated.

06/30/2005 Bob Rossi <bob@brasko.net>

   * README (Window Key): Window key can not be read in.

06/24/2005 Mike Mueller <mike@subfocal.net>

    * Fixed arrowstyle bugs:
        1. Tabs were broken, not treated as whitespace (results in short arrow)
        2. Arrow drawn on top of code when horizontally scrolled
    * RELEASE_TODO (cgdb-0.5.3): Updated arrow and ACS issues
    * README: Added documentation for the arrowstyle option

06/20/2005 Bob Rossi <bob@brasko.net>

    * RELEASE_TODO (cgdb-0.5.3): Add new task for .5.3.

06/18/2005 Mike Mueller <mike@subfocal.net>

    * NEWS: Added a new 'arrowstyle' option at a user's request

05/26/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO (cgdb-0.5.3): Add new task for .5.3.

05/26/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Add new command to news file.
	* README (At Source Window): Add the ^l command.
	* RELEASE_TODO: Modify todo.

05/26/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add some more work to be done.

05/23/2005 Bob Rossi <bob@brasko.net>

	* aclocal.m4: Autogenerated.
	* configure: Autogenerated.
	* config/readline.m4: Check for history library to pass autoconf tests.
	Changed message printed when libreadline or libhistory fail to be found.
	* NEWS: It's now an error not to have GNU readline or history library.

05/23/2005 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Preparing some work to be done for .5.3.
	* NEWS: Announcing changes for the next release.
	* aclocal.m4: Autogenerated.